<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_id"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/id"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:onClick="onClick"
            android:text="@string/plus_one"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginStart="5dp"
            android:onClick="onClick"
            android:text="@string/minus_one"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSampleRateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sample_rate"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerSampleRate"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewHz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/hz"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dip"
        android:onClick="onClick"
        android:text="@string/start"
        android:textSize="20sp" />

</LinearLayout>